--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn run build && yarn run serve",
+    "build": "./node_modules/.bin/tsc",
+    "serve": "node dist/index.js"
+  },
   "devDependencies": {
     "typescript": "3.0.3"
   }
