--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": ">=8.12.0"
   },
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Dan Young"
